--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 						<header>
 							<h1 class = "feature-title">About Me<br /> </h1>
 						</header>
-						<p>I am currently attending California Polytechnic University in San Luis Obispo pursuing a B.S. degree in Computer Science. My journey as a software engineer began when I was 18 years old at my local community college. I signed up for my first coding course and I quickly found my passion in the creative and the diagnose-and-solve process that is required to create a new technology and conquer setbacks. I'm enthusiastic about growing and gaining new skills along my software development journey. I value learning from others, creativity and innovation, and creating genuine connections. When I'm not coding, I'm an avid through-hiker and musician. I've hiked more than 1000 miles on the Pacific Crest Trail and the mountains are my second home. You can find me out on the trail and creating art when I'm not working! Take a look at my portfolio below to see some of my recent projects and skills.</p>
+						<p>I attended California Polytechnic University in San Luis Obispo where I graduated with a B.S. in Computer Science. My passion for software engineering originated when I discovered the excitement of the creative and expressive design process that is a part of creating a new technology. I value creativity and innovation, collaboration and learning from others, and genuine connections. When I'm not developing I'm an avid through-hiker and I love backpacking, climbing, and exploring the outdoors. I have hiked more than 1000 miles on the Pacific Crest Trail, and when I'm not creating you can find catch me out on the trails!
+
+					  Take a look at my portfolio below to see some of my recent projects and skills.</p>
 						<!-- <ul class="actions">
 							<li><a href="https://www.linkedin.com/in/connordyedev/" class="button">Learn More</a></li>
 						</ul> -->
